[gd_scene load_steps=12 format=3 uid="uid://bdq6vsxylm87t"]

[ext_resource type="Script" path="res://scenes/shop.gd" id="1_2hesb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hlxe3"]
bg_color = Color(0.174942, 0.381679, 0.428497, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wsjs3"]
bg_color = Color(0.576471, 0.576471, 0.576471, 0.760784)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qqqpp"]
bg_color = Color(0.243137, 0.243137, 0.243137, 0.760784)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uktrp"]
bg_color = Color(1, 1, 1, 0.760784)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nwf7w"]
bg_color = Color(0, 0, 0, 0.423529)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5xvl3"]
bg_color = Color(0, 0, 0, 0.635294)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7dg0r"]
bg_color = Color(0.251929, 0.508773, 0.568412, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 0.843137)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x4801"]
bg_color = Color(0.576471, 0.576471, 0.576471, 0.760784)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iw1oh"]
bg_color = Color(0.243137, 0.243137, 0.243137, 0.760784)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bcgog"]
bg_color = Color(1, 1, 1, 0.760784)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_size = 3

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2hesb")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hlxe3")

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -283.0
offset_top = -145.0
offset_right = 283.0
offset_bottom = -74.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "Shop"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Weapons List" type="ItemList" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -202.0
offset_top = -39.0
offset_right = -37.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
select_mode = 1
allow_search = false
item_count = 2
same_column_width = true
item_0/text = "Pistol - $0"
item_1/text = "Sniper Rifle - $500"

[node name="Equipment List" type="ItemList" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 34.0
offset_top = -39.0
offset_right = 217.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
select_mode = 1
allow_search = false
item_count = 2
same_column_width = true
item_0/text = "Double Jump - $0"
item_1/text = "Grapple Hook - $500"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 162.0
offset_top = 110.0
offset_right = 234.0
offset_bottom = 133.0
text = "Weapons"

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 405.0
offset_top = 110.0
offset_right = 490.0
offset_bottom = 133.0
text = "Equipment"

[node name="Confirm" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -84.0
offset_top = -80.0
offset_right = 84.0
offset_bottom = -38.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_wsjs3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qqqpp")
theme_override_styles/normal = SubResource("StyleBoxFlat_uktrp")
text = "Confirm Selection"

[node name="Bank" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -204.0
offset_top = 6.0
offset_right = -8.0
offset_bottom = 70.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_nwf7w")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Cart" type="Label" parent="."]
layout_mode = 0
offset_left = 463.0
offset_top = 73.0
offset_right = 596.0
offset_bottom = 102.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 20
vertical_alignment = 1

[node name="Select_Confirm" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel2" type="Panel" parent="Select_Confirm"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5xvl3")

[node name="Panel" type="Panel" parent="Select_Confirm"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -159.5
offset_top = -83.0
offset_right = 159.5
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7dg0r")

[node name="Yes" type="Button" parent="Select_Confirm"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -107.0
offset_top = -2.0
offset_right = -38.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_x4801")
theme_override_styles/pressed = SubResource("StyleBoxFlat_iw1oh")
theme_override_styles/normal = SubResource("StyleBoxFlat_bcgog")
text = "Yes"

[node name="No" type="Button" parent="Select_Confirm"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 41.0
offset_top = -2.0
offset_right = 110.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_x4801")
theme_override_styles/pressed = SubResource("StyleBoxFlat_iw1oh")
theme_override_styles/normal = SubResource("StyleBoxFlat_bcgog")
text = "No"

[node name="Label" type="Label" parent="Select_Confirm"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -149.0
offset_top = -63.0
offset_right = 149.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Confirm Selection"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Must_Select" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel2" type="Panel" parent="Must_Select"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5xvl3")

[node name="Panel" type="Panel" parent="Must_Select"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -159.5
offset_top = -83.0
offset_right = 159.5
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7dg0r")

[node name="Okay" type="Button" parent="Must_Select"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -34.5
offset_top = -173.0
offset_right = 34.5
offset_bottom = -131.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_x4801")
theme_override_styles/pressed = SubResource("StyleBoxFlat_iw1oh")
theme_override_styles/normal = SubResource("StyleBoxFlat_bcgog")
text = "Okay
"

[node name="Label" type="Label" parent="Must_Select"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -149.0
offset_top = -63.0
offset_right = 149.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Must Select
Weapon And Equipment"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Not_Enough" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel2" type="Panel" parent="Not_Enough"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5xvl3")

[node name="Panel" type="Panel" parent="Not_Enough"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -159.5
offset_top = -83.0
offset_right = 159.5
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7dg0r")

[node name="Okay2" type="Button" parent="Not_Enough"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -34.5
offset_top = -173.0
offset_right = 34.5
offset_bottom = -131.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_x4801")
theme_override_styles/pressed = SubResource("StyleBoxFlat_iw1oh")
theme_override_styles/normal = SubResource("StyleBoxFlat_bcgog")
text = "Okay
"

[node name="Label" type="Label" parent="Not_Enough"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -149.0
offset_top = -63.0
offset_right = 149.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Insufficient Funds"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="item_clicked" from="Weapons List" to="." method="_on_weapons_list_item_clicked"]
[connection signal="item_clicked" from="Equipment List" to="." method="_on_equipment_list_item_clicked"]
[connection signal="pressed" from="Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="Select_Confirm/Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="Select_Confirm/No" to="." method="_on_no_pressed"]
[connection signal="pressed" from="Must_Select/Okay" to="." method="_on_okay_pressed"]
[connection signal="pressed" from="Not_Enough/Okay2" to="." method="_on_okay_2_pressed"]
